update location and request flow